--- a/less/index.less
+++ b/less/index.less
@@ -55,6 +55,15 @@ table {
 
 html, body {
 	height: 100%;
-	background-color: red;
+	background-color: orange;
 }
+
+
+
+
+/* variables */
+
+@primaryColor: gray;
+@secondaryColor: orange;
+@fontColor: black;
 
