--- a/css/index.css
+++ b/css/index.css
@@ -136,9 +136,72 @@ body {
   background-color: orange;
 }
 /* variables */
+@mobile Size: max-width: 500px;
 /*style */
+.html {
+  font-size: 62.5%;
+}
 .container {
-  color: gray;
+  color: orange;
+  background-color: gray;
   font-family: Arial, Verdana, Georgia, Times New Roman;
+  padding: 10px;
+}
+.container .top-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom: 1px solid black;
+  padding: 10px;
+}
+.container .intro {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.container .intro .top-intro {
+  padding: 10px;
+}
+.container .intro h2 {
+  font-size: 2rem;
+}
+.container .skills {
+  border: 1px solid black;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.container .skills h2 {
+  font-size: 1.5rem;
+}
+.container .skills ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: square;
+}
+.container .work-history {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.container .work-history table,
+.container .work-history th,
+.container .work-history td {
+  border: 1px solid black;
+  text-align: left;
+  padding: 5px;
+}
+.container .work-history th {
+  font-size: 1.25rem;
+}
+@media (max-width: 500px) {
+  .container {
+    color: red;
+  }
 }
 /* mixins */
